--- a/index.html
+++ b/index.html
@@ -14,54 +14,35 @@
     <h1 align="center"> 4k Photo gallery</h1>
     <div class="container">
         <div class="gallery">
-            <a href="images/1.jpg" data-lightbox="img1" data-title="1">
-                <img src="images/1.jpg">
+            <a href="1.jpg" data-lightbox="img1" data-title="1">
+                <img src="1.jpg">
             </a>
-            <a href="images/2.jpg" data-lightbox="img1" data-title="2">
-                <img src="images/2.jpg">
+            <a href="2.jpg" data-lightbox="img1" data-title="2">
+                <img src="2.jpg">
             </a>
-            <a href="images/3.jpg" data-lightbox="img3" data-title="3">
-                <img src="images/3.jpg">
+            <a href="3.jpg" data-lightbox="img3" data-title="3">
+                <img src="3.jpg">
             </a>
-            <a href="images/4.jpg" data-lightbox="img4" data-title="4">
-                <img src="images/4.jpg">
+            <a href="4.jpg" data-lightbox="img4" data-title="4">
+                <img src="4.jpg">
             </a>
-            <a href="images/5.jpg" data-lightbox="img5" data-title="5">
-                <img src="images/5.jpg">
+            <a href="5.jpg" data-lightbox="img5" data-title="5">
+                <img src="5.jpg">
             </a>
-            <a href="images/6.jpg" data-lightbox="img6" data-title="6">
-                <img src="images/6.jpg">
+            <a href="6.jpg" data-lightbox="img6" data-title="6">
+                <img src="6.jpg">
             </a>
-            <a href="images/7.jpg" data-lightbox="im7" data-title="7">
-                <img src="images/7.jpg">
+            <a href="7.jpg" data-lightbox="im7" data-title="7">
+                <img src="7.jpg">
             </a>
-            <a href="images/8.jpg" data-lightbox="im8" data-title="8">
-                <img src="images/8.jpg">
+            <a href="8.jpg" data-lightbox="im8" data-title="8">
+                <img src="8.jpg">
             </a>
-            <a href="images/9.jpg" data-lightbox="im9" data-title="9">
-                <img src="images/9.jpg">
+            <a href="9.jpg" data-lightbox="im9" data-title="9">
+                <img src="9.jpg">
             </a>
-            <a href="images/10.jpg" data-lightbox="im710" data-title="10">
-                <img src="images/10.jpg">
-            </a>
-            <a href="images/11.jpg" data-lightbox="im11" data-title="11">
-                <img src="images/11.jpg">
-            </a>
-            <a href="images/12.jpg" data-lightbox="im12" data-title="12">
-                <img src="images/12.jpg">
-            </a>
-            <a href="images/13.jpg" data-lightbox="im13" data-title="13">
-                <img src="images/13.jpg">
-            </a>
-            <a href="images/14.jpg" data-lightbox="im14" data-title="14">
-                <img src="images/14.jpg">
-            </a>
-            <a href="images/15.jpg" data-lightbox="im15" data-title="15">
-                <img src="images/15.jpg">
-            </a>
-            <a href="images/16.jpg" data-lightbox="im16" data-title="16">
-                <img src="images/16.jpg">
-            </a>
+           
+        
 
         </div>
     </div>
